Z-index bug fixes

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -23,13 +23,13 @@
 .header-nav {
   position: sticky;
   top: 85px;
-  z-index: 1030;
+  z-index: 10;
 }
 
 .sticky-nav {
   position: sticky;
   top: 225px;
-  z-index: 1;
+  z-index: 10;
 }
 
 .row {
@@ -118,4 +118,10 @@ input {
 
 textarea {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+
+.input-group {
+  z-index: 1;
 }
